chore(deps): CVE 钉版 + 重复第三方依赖收敛 + demo 冗余收敛
- CVE 钉版(根 POM): jackson 2.18.3->2.18.9, xstream 1.4.21, httpclient 4.5.14
- 依赖收敛: selenium/mockito/h2/flyway/htmlunit3 版本收口至根 properties,
  替换各模块硬编码版本(pw-web-ui/pw-reports/rest-assured-core/pw-route/test-automation)
- demo 冗余收敛: route-demo-web/service 移除由 starter-web 传递引入的
  spring-boot/spring-boot-autoconfigure, 版本走本地 spring.boot.version 属性
- 含前期 web/route 模块小重构与配套测试